--- a/frontend/build.gradle
+++ b/frontend/build.gradle
@@ -1,4 +1,3 @@
-
 group 'main.kotlin.codeshare'
 version '1.0-SNAPSHOT'
 
@@ -8,12 +7,15 @@ apply plugin: 'org.jetbrains.kotlin.frontend'
 
 repositories {
     jcenter()
+    maven { url = "https://kotlin.bintray.com/kotlin-js-wrappers/" }
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-js:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-test-js:$kotlin_version"
     compile("org.jetbrains.kotlinx:kotlinx-html-js:$html_version")
+    compile 'org.jetbrains:kotlin-react:16.3.1-pre.27-kotlin-1.2.30'
+    compile 'org.jetbrains:kotlin-react-dom:16.3.1-pre.27-kotlin-1.2.30'
 }
 
 kotlinFrontend {
